--- a/{{cookiecutter.project_slug}}/.github/workflows/release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/release.yml
@@ -16,29 +16,29 @@ jobs:
           id: create_release
           uses: actions/create-release@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN }}
           with:
-            tag_name: ${{ github.ref }}
-            release_name: Release ${{ github.ref }}
+            tag_name: ${{ "{{" }} github.ref }}
+            release_name: Release ${{ "{{" }} github.ref }}
             draft: false
             prerelease: false
         - name: Upload Release Asset (darwin)
           id: upload-release-asset-darwin
           uses: actions/upload-release-asset@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN }}
           with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: ./bin/{{ cookiecutter.project_slug }}.darwin
-            asset_name: {{ cookiecutter.project_slug }}.darwin
+            upload_url: ${{ "{{" }} steps.create_release.outputs.upload_url }}
+            asset_path: ./bin/{{ "{{" }} cookiecutter.project_slug }}.darwin
+            asset_name: {{ "{{" }} cookiecutter.project_slug }}.darwin
             asset_content_type: application/octet-stream
         - name: Upload Release Asset (linux)
           id: upload-release-asset-linux
           uses: actions/upload-release-asset@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN }}
           with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: ./bin/{{ cookiecutter.project_slug }}.linux
-            asset_name: {{ cookiecutter.project_slug }}.linux
+            upload_url: ${{ "{{" }} steps.create_release.outputs.upload_url }}
+            asset_path: ./bin/{{ "{{" }} cookiecutter.project_slug }}.linux
+            asset_name: {{ "{{" }} cookiecutter.project_slug }}.linux
             asset_content_type: application/octet-stream
