--- a/{{cookiecutter.project_slug}}/.github/workflows/release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/release.yml
@@ -29,8 +29,8 @@ jobs:
             GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN }}
           with:
             upload_url: ${{ "{{" }} steps.create_release.outputs.upload_url }}
-            asset_path: ./bin/{{ "{{" }} cookiecutter.project_slug }}.darwin
-            asset_name: {{ "{{" }} cookiecutter.project_slug }}.darwin
+            asset_path: ./bin/{{ cookiecutter.project_slug }}.darwin
+            asset_name: {{ cookiecutter.project_slug }}.darwin
             asset_content_type: application/octet-stream
         - name: Upload Release Asset (linux)
           id: upload-release-asset-linux
@@ -39,6 +39,6 @@ jobs:
             GITHUB_TOKEN: ${{ "{{" }} secrets.GITHUB_TOKEN }}
           with:
             upload_url: ${{ "{{" }} steps.create_release.outputs.upload_url }}
-            asset_path: ./bin/{{ "{{" }} cookiecutter.project_slug }}.linux
-            asset_name: {{ "{{" }} cookiecutter.project_slug }}.linux
+            asset_path: ./bin/{{ cookiecutter.project_slug }}.linux
+            asset_name: {{ cookiecutter.project_slug }}.linux
             asset_content_type: application/octet-stream
