--- a/{{cookiecutter.project_slug}}/.goreleaser.yml
+++ b/{{cookiecutter.project_slug}}/.goreleaser.yml
@@ -1,5 +1,7 @@
 # This is an example .goreleaser.yml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
+universal_binaries:
+  - replace: true
 before:
   hooks:
     # You may remove this if you don't use go modules.
